--- a/manifest.json
+++ b/manifest.json
@@ -2,32 +2,32 @@
     "name": "Iron Heist Poetry",
     "short_name": "Iron Heist",
     "description": "Explore soul-stirring poetry by Iron Heist (John Colt), featuring collections, blogs, and curated playlists.",
-    "start_url": "/index.html",
+    "start_url": "/main/index.html",
     "display": "standalone",
     "background_color": "#f8f9fa",
     "theme_color": "#343a40",
-    "scope": "/",
+    "scope": "/main/",
     "icons": [
         {
-            "src": "/app-icons src/ironheist-192.png",
+            "src": "/main/app-icons src/ironheist-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/app-icons src/ironheist-512.png",
+            "src": "/main/app-icons src/ironheist-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/app-icons src/ironheist-maskable-192.png",
+            "src": "/main/app-icons src/ironheist-maskable-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/app-icons src/ironheist-maskable-512.png",
+            "src": "/main/app-icons src/ironheist-maskable-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
