--- a/manifest.json
+++ b/manifest.json
@@ -6,28 +6,28 @@
     "display": "standalone",
     "background_color": "#f8f9fa",
     "theme_color": "#343a40",
-    "scope": "/main/",
+    "scope": "/",
     "icons": [
         {
-            "src": "/app-icons src/ironheist-192.png",
+            "src": "app-icons src/ironheist-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/app-icons src/ironheist-512.png",
+            "src": "app-icons src/ironheist-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any"
         },
         {
-            "src": "/app-icons src/ironheist-maskable-192.png",
+            "src": "app-icons src/ironheist-maskable-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/app-icons src/ironheist-maskable-512.png",
+            "src": "app-icons src/ironheist-maskable-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
